<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="30dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="@string/title"
            android:textColor="#6C6C6C"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imgLogo"
            android:rotation="40"
            android:contentDescription="@string/logo_text"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ic_action_name"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txtTitle"
            />

        <TextView
            android:id="@+id/txtEnterAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLogo"
            android:layout_marginBottom="10dp"
            android:text="@string/enter_amount"
            android:textColor="#6C6C6C"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtAmountToConvert"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/txtEnterAmount"
            android:background="@drawable/border_spinner"
            android:hint="@string/one"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:textColorHint="#939090"
            android:textSize="18sp"
            android:textStyle="bold"
            android:autofillHints="none" />

        <TextView
            android:id="@+id/txtCurrencyFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtAmountToConvert"
            android:layout_marginBottom="10dp"
            android:textColor="#6C6C6C"
            android:text="@string/from"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCurrencyTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtAmountToConvert"
            android:layout_toEndOf="@id/txtCurrencyFrom"
            android:layout_marginStart="160dp"
            android:layout_marginBottom="10dp"
            android:textColor="#6C6C6C"
            android:text="@string/to"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtCurrencyFrom"
            android:id="@+id/relSpinnerFrom"
            android:background="@drawable/border_spinner">
            <Spinner
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:textColor="#6C6C6C"
                android:entries="@array/spn_entities"
                android:id="@+id/spnCurrencyFrom"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtCurrencyFrom"
            android:layout_marginStart="100dp"
            android:id="@+id/relSpnTo"
            android:layout_toEndOf="@id/relSpinnerFrom"
            android:background="@drawable/border_spinner">

            <Spinner
                android:id="@+id/spnCurrencyTo"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:entries="@array/spn_entities" />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtResult"
            android:layout_marginVertical="20dp"
            android:text="1000 USD = 800 000 NGN"
            android:textSize="18sp"
            android:layout_below="@id/relSpnTo"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnConvert"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_text"
            android:layout_below="@id/txtResult"
            />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>